@@ -1,4 +1,8 @@
 2002-10-22  Bill Bumgarner  <bbum@codefab.com>
+	* Updated objc unit tests a bit.
+	* Added Foundation unit tests.
+	* Moved a number of tests from objc -> Foundation.
+
 	* Updated the MANIFEST (too bad we can't effectively use MANIFEST.in)
 	* Slight correction/addition to setup.py
 
